fix: addressing warnings in memory-core